Dios esta aqui parte 4

--- a/Servlet/src/main/webapp/calculadora.xhtml
+++ b/Servlet/src/main/webapp/calculadora.xhtml
@@ -11,7 +11,7 @@ and open the template in the editor.
     <h:head></h:head>
     <h:body>
         <h:form id="calculadora_form">
-            <p:outputLabel>Johann es re gurrero</p:outputLabel>
+            <p:outputLabel value="#{BackingBean.numeros}" style="display:none" />
 
         </h:form>
     </h:body>
