--- a/Servlet/src/main/webapp/calculadora.xhtml
+++ b/Servlet/src/main/webapp/calculadora.xhtml
@@ -3,7 +3,7 @@
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3c.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -11,8 +11,9 @@ and open the template in the editor.
     <h:head></h:head>
     <h:body>
         <h:form id="calculadora_form">
-            <p:outputLabel value="#{BackingBean.numeros}" style="display:none" />
-
+            <p:inputText id="double-input" value="#{BackingBean.numeros}" />
+            <p:outputLabel value="#{BackingBean.moda}" style="display:none" />
         </h:form>
     </h:body>
 </html>
+-->
